@@ -65,8 +65,6 @@ class TypeInformation(SimpleItemWithProperties, ActionProviderBase):
     """ Base class for information about a content type.
     """
 
-    _isTypeInformation = 1
-
     manage_options = ( SimpleItemWithProperties.manage_options[:1]
                      + ( {'label':'Aliases',
                           'action':'manage_aliases'}, )
@@ -634,7 +632,14 @@ class TypesTool(UniqueObject, IFAwareObjectManager, Folder,
             else:
                 return None
         ob = getattr( self, contentType, None )
+        if ITypeInformation.providedBy(ob):
+            return ob
         if getattr(aq_base(ob), '_isTypeInformation', 0):
+            # BBB
+            warn("The '_isTypeInformation' marker attribute is deprecated, "
+                 "and will be removed in CMF 2.3.  Please mark the instance "
+                 "with the 'ITypeInformation' interface instead.",
+                 DeprecationWarning, stacklevel=2)
             return ob
         else:
             return None
@@ -650,17 +655,20 @@ class TypesTool(UniqueObject, IFAwareObjectManager, Folder,
         for t in self.objectValues():
             # Filter out things that aren't TypeInformation and
             # types for which the user does not have adequate permission.
-            if not getattr(aq_base(t), '_isTypeInformation', 0):
-                continue
-            if not t.getId():
-                # XXX What's this used for ?
-                # Not ready.
-                continue
-            # check we're allowed to access the type object
-            if container is not None:
-                if not t.isConstructionAllowed(container):
-                    continue
-            rval.append(t)
+            if ITypeInformation.providedBy(t):
+                rval.append(t)
+            elif getattr(aq_base(t), '_isTypeInformation', 0):
+                # BBB
+                warn("The '_isTypeInformation' marker attribute is deprecated, "
+                     "and will be removed in CMF 2.3.  Please mark the "
+                     "instance with the 'ITypeInformation' interface instead.",
+                     DeprecationWarning, stacklevel=2)
+                rval.append(t)
+        # Skip items with no ID:  old signal for "not ready"
+        rval = [t for t in rval if t.getId()]
+        # check we're allowed to access the type object
+        if container is not None:
+            rval = [t for t in rval if t.isConstructionAllowed(container)]
         return rval
 
     security.declareProtected(AccessContentsInformation, 'listContentTypes')
