@@ -16,6 +16,7 @@ $Id$
 """
 
 import sys
+from warnings import warn
 
 from AccessControl import ClassSecurityInfo
 from Acquisition import aq_base, aq_inner, aq_parent
@@ -460,8 +461,15 @@ class WorkflowTool(UniqueObject, IFAwareObjectManager, Folder,
         """ Retrieve a given workflow.
         """
         wf = getattr(self, wf_id, None)
-        if getattr(wf, '_isAWorkflow', False) or \
-                IWorkflowDefinition.providedBy(wf):
+        if IWorkflowDefinition.providedBy(wf):
+            return wf
+        if getattr(wf, '_isAWorkflow', False):
+            # BBB
+            warn("The '_isAWorkflow' marker attribute for workflow "
+                 "definitions is deprecated and will be removed in "
+                 "CMF 2.3;  please mark the definition with "
+                 "'IWorkflowDefinition' instead.",
+                 DeprecationWarning, stacklevel=2)
             return wf
         else:
             return None
@@ -485,7 +493,15 @@ class WorkflowTool(UniqueObject, IFAwareObjectManager, Folder,
         wf_ids = []
 
         for obj_name, obj in self.objectItems():
-            if getattr(obj, '_isAWorkflow', 0):
+            if IWorkflowDefinition.providedBy(obj):
+                wf_ids.append(obj_name)
+            elif getattr(obj, '_isAWorkflow', 0):
+                # BBB
+                warn("The '_isAWorkflow' marker attribute for workflow "
+                     "definitions is deprecated and will be removed in "
+                     "CMF 2.3;  please mark the definition with "
+                     "'IWorkflowDefinition' instead.",
+                     DeprecationWarning, stacklevel=2)
                 wf_ids.append(obj_name)
 
         return tuple(wf_ids)
