@@ -23,11 +23,13 @@ from OFS.SimpleItem import SimpleItem
 from zope.component import adapter
 from zope.component import getSiteManager
 from zope.component import provideHandler
+from zope.interface import implements
 from Products.CMFCore.interfaces import IActionWillBeInvokedEvent
 from Products.CMFCore.interfaces import IActionRaisedExceptionEvent
 from Products.CMFCore.interfaces import IActionSucceededEvent
-
+from Products.CMFCore.interfaces import IContentish
 from Products.CMFCore.interfaces import ITypesTool
+from Products.CMFCore.interfaces import IWorkflowDefinition
 
 
 class Dummy( SimpleItem ):
@@ -41,6 +43,7 @@ class Dummy( SimpleItem ):
 
 class DummyWorkflow( Dummy ):
 
+    implements(IWorkflowDefinition)
     meta_type = 'DummyWorkflow'
     _isAWorkflow = 1
     _known_actions=()
@@ -123,8 +126,8 @@ def notifyExceptionHandler(evt):
 
 class DummyContent( Dummy ):
 
+    implements(IContentish)
     meta_type = 'Dummy'
-    _isPortalContent = 1
 
     def getPortalTypeName(self):
         return 'Dummy Content'
