@@ -86,7 +86,6 @@ class Image(PortalContent, OFS.Image.Image, DefaultDublinCoreImpl):
                      )
     
     effective_date = expiration_date = None
-    _isDiscussable = 1
     icon = PortalContent.icon
 
     manage_options = ( PortalContent.manage_options
